# mu

./: .gitignore  Cargo.toml  PKGBUILD  README.md  SPEC.md  WINDOWS.md  mu.zsh  package-lock.json  package.json  test.zsh
.github/workflows/: ci.yml
builtins/: agent-browser.md  background-task.md  brave-search.md  customize-mu.md  exa-search.md  markitdown-convert.md  markitdown.md  subagent.md
deploy/: mu-web.service
packaging/msys2/: PKGBUILD
shell/: mu.zsh  test.zsh  zsh
shell-plugins/: README.md  mu.zsh
src/: agent.rs  applets.rs  artifact.rs  attachment.rs  bash.rs  chat_completions.rs  cli.rs  cli_tests.rs  compaction.rs  compaction_tests.rs  config.rs  config_tests.rs  env.rs  env_tests.rs  exit.rs  guardrail.md  guardrail.rs  guardrail_prompt.rs  install.rs  main.rs  main_tests.rs  models.rs  models_tests.rs  openai.rs  paths.rs  paths_tests.rs  plugin.zsh  provider.rs  random.rs  redaction.rs  redaction_tests.rs  renderer.rs  responses.rs  runtime.rs  runtime_tests.rs  skills.rs  store.rs  system_preamble.md  system_prompt.rs  system_prompt_tests.rs  (+5 more)
src/agent/: mod.rs  tests.rs
src/applets/: apply_patch.rs  mod.rs  view_image.rs
src/guardrail/: mod.rs  prompt.rs  prompt_tests.rs  tests.rs
src/prompts/: guardrail.md
src/provider/: mod.rs  openai.rs  openai_tests.rs
src/renderer/: tests.rs
src/store/: mod.rs  tests.rs
src/tools/: bash.rs  bash_tests.rs  mod.rs  tests.rs  truncate.rs  truncate_tests.rs
src/web/: app.css  app.js  assets.rs  http.rs  index.html  tests.rs
src/web/components/: mu-composer.js  mu-conversation-view.js  mu-sidebar.js
src/web/lib/: dom.js  icons.js  projects.js
src/web/styles/: layout.css  sidebar.css
testing/.mu/: .env
testing/e2e/: harness.mjs  web.test.mjs
testing/fixtures/project/.mu/: config.jsonc
tests/: mu-zsh-plugin.zsh
web/: package-lock.json  package.json  server.mjs  server.ts  tsconfig.json
web/public/: app.css  app.js
web/public/components/: mu-composer.js  mu-conversation-view.js  mu-project-modal.js  mu-sidebar.js
web/public/lib/: api.js  constants.js  dom.js  projects.js  store.js
web/public/styles/: base.css  composer.css  conversation.css  layout.css  modal.css  sidebar.css  tokens.css
web/testing/e2e/: harness.mjs  harness.ts  web.test.mjs  web.test.ts
web/tests/e2e/: harness.ts  web.test.ts
web/tests/fixtures/project/.mu/: .gitignore
