[package]
name = "mu"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
fs2 = "0.4.3"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
jsonc-parser = { version = "0.32.4", features = ["serde"] }
libc = "0.2.186"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
rusqlite = { version = "0.39.0", default-features = false }
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
async-trait = "0.1.89"
uuid = { version = "1.23.4", features = ["v4"] }
