[package]
name = "mu"
version = "0.1.0"
edition = "2024"
description = "Small composable agent runtime for the terminal"
repository = "https://github.com/ylxdzsw/mu"
license = "MIT"

[dependencies]
aho-corasick = "1.1.4"
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6.2", features = ["derive"] }
fs2 = "0.4.3"
jsonc-parser = { version = "0.33.0", features = ["serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
rusqlite = { version = "0.40.1", default-features = false }
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.4", default-features = false, features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
async-trait = "0.1.89"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.3"
uuid = { version = "1.24.0", features = ["v4"] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
